# service-mesh-istio

kube/: .gitignore  postgres.yaml  product-list.yaml  product-ratings.yaml  product-reviews.yaml
services/postgres/: Dockerfile  pg-init.sql
services/productRatings/: Cargo.toml  Dockerfile  ratings.rb
services/productRatings/src/: db.rs  error.rs  handler.rs  main.rs
services/productReviews/: Dockerfile  reviews.rb
services/products/: Dockerfile  products.js
services/productsList/: Dockerfile  package.json
